--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^7.6.3",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.10",
+    "zod": "^3.25.69",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
